<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ArduinoGUI</string>
    <string name="app_name_connection">Verbindung einrichten</string>
    <string name="app_name_project">Projekt einrichten</string>
    <string name="action_settings">Einstellungen</string>
    <string name="menu_popup_addbutton">Button hinzufügen</string>
    <string name="menu_popup_addswitch">Switch hinzufügen</string>
    <string name="mennu_popup_addled">LED hinzufügen</string>
    <string name="title_activity_connection">Verbindung einrichten</string>
    <string name="txtConType">Art der Verbindung</string>
    <string name="tvConName">Bezeichnung der Verbindung</string>
    <string name="etConNameHint">Bezeichnung</string>
    <string name="btnSubmit">OK</string>
    <string name="btnCancel">Abbrechen</string>
    <string name="menu_popup_identifyer">Identifier</string>
    <string name="menu_popup_delete">Element löschen</string>
    <string name="txtAllCons">Verfügbare Verbindungen</string>
    <string name="btnNewCon">Neue Verbindung einrichten</string>
    <string name="tglBtnChooseCon">auswählen</string>
    <string name="tglBtnCloseCon">trennen</string>
    <string name="ButtonSize">Größe der Buttons</string>
    <string name="settings_ok">Übernehmen</string>
    <string name="settings_buttons">Anordnung</string>
    <string name="Colls">Anzahl der Reihen</string>
    <string name="title_activity_new_project">Projekt einrichten</string>
    <string name="projName">Projektname</string>
    <string name="Pro_action_settings">Einstellungen</string>
    <string name="description_btCon">Bluetooth-Verbindung</string>
    <string name="description_ethernetCon">Ethernet-Verbindung</string>
    <string name="hintProName">Projektname</string>
    <string name="txtAllPro">Verfügbare Projekte</string>
    <string name="btnNewPro">Projekt einrichten</string>
    <string name="btnAddNewPro">Neues Projekt hinzufügen</string>
    <string name="btnScanBTDevices">Nach Geräten suchen</string>
    <string name="tvAvailableBtDevices">Verfügbare Geräte</string>
    <string name="popupMenuEntryDeleteEntry">Eintrag entfernen</string>
    <string name="popupMenuEntryAlterEntry">Bearbeiten</string>
    <string name="classSwitchModel">class elements.SwitchModel</string>
    <string name="classLedModel">"class elements.LedModel"</string>
    <string name="classPushButtonModel">"class elements.PushButtonModel"</string>
    <string name="classAdcOutputModel">"class elements.AdcOutputModel"</string>
    <string name="classAdcInputModel">"class elements.AdcInputModel"</string>
    <string name="classEmptyElement">"class elements.EmptyElement"</string>
    <string name="txtAddress">Adresse</string>
    <string name="txtMacAddressBT">MAC-Adresse des Bluetooth-Moduls</string>
    <string name="txtMacAddress">MAC-Adresse</string>
    <string name="txtIpAddressArduino">IP-Adresse des Arduinos</string>
    <string name="txtIpAddress">IP-Adresse</string>
    <string name="addPwmView">ADC - Regler hinzufügen</string>
    <string name="addPwmCol">ADC - Anzeige hinzufügen</string>
    <string name="errorNameEmpty">Name darf nicht leer sein</string>
    <string name="errorNameNotUnique">Name bereits vorhanden</string>
    <string name="errInvalidMacAddress">Ungültige MAC-Adresse</string>
    <string name="title_activity_monitor">MonitorActivity</string>
    <string name="menu_tools_header">Tools</string>
    <string name="popupMenuToolsMontior">Diagramm</string>
    <string name="title_activity_diagram">Diagramm anzeigen</string>
    <string name="menu_choice_diagram">Diagramm</string>
    <string name="menu_popup_record">Aufzeichnung starten</string>
    <string name="txtPin">Pin: </string>
    <string name="txtElement">Element: </string>
    <string name="btnAddDataPoints">Daten hinzufügen</string>
    <string name="btnRemoveDataPoints">Daten entfernen</string>
    <string name="txtAvailableElements">Verfügbare Elemente</string>
    <string name="noProjekt">kein Projekt</string>
    <string name="noConnection">keine Verb.</string>
    <string name="diagramAdcInput">"ADC-Regler "</string>
    <string name="diagramAdcOutput">"ADC-Anzeige "</string>
    <string name="txtElementsCount">Anzahl der Elemente</string>

    <string-array name="arrConTypeEntries">
        <item>Bitte wählen Sie</item>
        <item>Bluetooth</item>
        <item>Ethernet</item>
    </string-array>
    <string-array name="languages">
        <item>Sprache</item>
        <item>Deutsch</item>
        <item>English</item>
    </string-array>

    <string name="title_activity_help">Hilfe</string>
    <string name="start_activity_help">Hilfe</string>

    <string name="strHelpH1">Was ist ein Arduino?</string>
    <string name="strHelpA1">Beim Arduino handelt es sich um den wohl gängigsten Mikrocontroller am Markt.
        Ob man damit das eigene Garagentor steuert, oder die Beleuchtung des Eiffelturms, bleibt einem selbst überlassen.
        Die Grenzen des Machbaren sind dabei meist die Grenzen der eigenen Kreativität, denn der Arduino steht für das Universal -
        Bastler - Werkzeug schlechthin.
        Mit ArduinoGUI ist es nun möglich, Ihre eigenen Arudino-Produkte bzw. -Projekte vom
        Smartphone aus steuern und somit auch von der Ferne aus benutzen zu können. </string>

    <string name="strHelpH2">Wie kann ich ArduinoGUI mit meinem eigenen Arduino-Projekt verwenden?</string>
    <string name="strHelpA2">Beim ersten Start erscheinen auf der Oberfläche einige Plus-Symbole, welche von Ihnen mit Elementen
        besetzt werden können.
        Am unteren Ende des Bildschirms befindet sich in der Mitte ein Button, mit dem der Editier-Modus (Bearbeitungs-Modus)
        ein- bzw. ausgeschaltet werden kann.
        Im Edit-Mode können Elemente gelöscht, auf andere Quellen geschaltet werden oder deren Verlaufsdiagramme gezeichnet werden.
        Ist der Editier-Modus deaktiviert, so können die Elemente wie vorgesehen verwendet werden: Ein Button bleibt solange
        aktiviert, wie angeklickt, ein Schalter kann Ein-/Aus-Signale senden, ADC-Elemente können Werte von 0 bis 255 annehmen.
        Ist ein Element hinzugefügt, so kann im Edit-Modus der <i>Idientifier</i> bestimmt werden. Dies ist der Pin, der zusammen mit
        dem Wert bei Betätigen des Elements an den Arduino gesendet werden soll.
    </string>

    <string name="strHelpH3">Wie baue ich eine Verbindung auf?</string>
    <string name="strHelpA3">ArduinoGUI bietet 3 Möglichkeiten sich mit dem Arduino zu verbinden:
        über Bluetooth, Wlan oder Ethernet. Für alle Betriebsmöglichkeiten wird das entsprechende Shield benötigt.
        Bluetooth: Einfachste Verbindungsart, einfach von App aus Bluetooth-Modul des Arduinos suchen und verbinden – fertig.
        Ethernet-/WLAN-Shield: Arduino kann über einen Router in das Netzwerk.
        Am Smartphone stellt man dann die IP-Adresse des Wlan- bzw. Ethernet- Shields ein – fertig.
    </string>

    <string name="strHelpH4">Wie bringe ich meinen Arduino dazu, mit der App zu kommunizieren?</string>
    <string name="strHelpA4">Für die Kommunikation muss die jeweilige Methode in das Arduino-Programm implementiert werden.
        Für das Auslesen der gesendeten Daten muss die Library ArduinoGui verwendet werden, welche auf unserer Website zum
        Download zur Verfügung gestellt wird. Auf unserer Website befinden sich ebenso Beispielprogramme zu Bluetooth, Ethernet
        und WLAN. Sobald im App das mit dem Eingabeelement verbundene Ausgabeelement aktualisiert werden soll, muss vom Arduino
        aus der empfangene Code einfach an das Smartphone zurückgesendet werden.
    </string>

    <string name="strHelpH5">Ich sende Daten, aber die Anzeigeelemente werden nicht aktualisiert</string>
    <string name="strHelpA5">Um die Anzeigeelemente zu aktualisieren, müssen Sie an der gewünschten Stelle den am Arduino
        empfangenen Code einfach an die App zurück senden. Erst dann erfolgt die Aktualisierung des Anzeigeelements. Somit
        können Sie die gesendeten Daten noch bearbeiten und das Anzeigeelement auch erst zu einem späteren gewünschten Zeitpunkt
        aktualisieren.</string>

    <string name="strHelpH6">Die im Diagramm angezeigten Daten sind nicht vollständig</string>
    <string name="strHelpA6">In den Verlaufsdiagrammen werden nur jene Zustände abgebildet, welche seit dem letzten Start der
        App geändert wurden. </string>

    <string name="strHelpH7">Der Zeitnullpunkt des Diagramms stimmt nicht</string>
    <string name="strHelpA7">Zeitnullpunkt der Diagramme ist immer die erste Benutzerinteraktion, bei der Daten gesendet werden,
        seit neuerlichem Start der App. </string>


</resources>
