<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.arduinogui.HelpActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvHelpH1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strHelpH1"
                android:textSize="@dimen/textsize_help_headline"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHelpA1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strHelpA1"
                android:textSize="@dimen/textsize_help_answer" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/tvHelpH2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strHelpH2"
                android:textSize="@dimen/textsize_help_headline"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHelpA2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strHelpA2"
                android:textSize="@dimen/textsize_help_answer" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/tvHelpH3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strHelpH3"
                android:textSize="@dimen/textsize_help_headline"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHelpA3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strHelpA3"
                android:textSize="@dimen/textsize_help_answer" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/tvHelpH4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strHelpH4"
                android:textSize="@dimen/textsize_help_headline"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHelpA4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strHelpA4"
                android:textSize="@dimen/textsize_help_answer" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/tvHelpH5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strHelpH5"
                android:textSize="@dimen/textsize_help_headline"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHelpA5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strHelpA5"
                android:textSize="@dimen/textsize_help_answer" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/tvHelpH6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strHelpH6"
                android:textSize="@dimen/textsize_help_headline"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHelpA6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strHelpA6"
                android:textSize="@dimen/textsize_help_answer" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/tvHelpH7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strHelpH7"
                android:textSize="@dimen/textsize_help_headline"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHelpA7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strHelpA7"
                android:textSize="@dimen/textsize_help_answer" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>
