<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.arduinogui.MainActivity" >

    <item
        android:id="@+id/connection"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_activity_connection"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/newproject"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_activity_new_project"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/start_activity_help"
        tools:ignore="AppCompatResource" />

</menu>
