<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_projekt"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:background="@drawable/background2"
    tools:context="com.example.arduinogui.MainActivity"
    tools:ignore="MergeRootFrame"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Name des Projekts" />

    <EditText
        android:id="@+id/etProNameAlter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintProName" >

    </EditText>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linLayout1Alter"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSubmitProAlter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/btnSubmit" />

            <Button
                android:id="@+id/btnCancelProAlter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnCancel" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>