<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.arduinogui.NewConnectionActivity"
    tools:ignore="MergeRootFrame"
    android:background="@drawable/background1">

    <ScrollView
        android:id="@+id/scrollViewParent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/linLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:isScrollContainer="true"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvConType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtConType" />

                <Spinner
                    android:id="@+id/spinnerConType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/arrConTypeEntries" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/tvConName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvConName" />

                <!-- TODO abhängig von verwendetem Handy Name auf bestimmte Anzahl von Zeichen begrenzen, da Auswählen-Button zu langen Namen verdeckt-->
                <EditText
                    android:id="@+id/etConName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etConNameHint"
                    android:maxLength="20">

                    <requestFocus />
                </EditText>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/tvConAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <!-- MAC-Adresse kann maximal 17 Zeichen lang sein (inkl. ":" bzw. "-"), IP-Adresse max. 15 Zeichen (inkl. ".") -->

                <EditText
                    android:id="@+id/etConAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="17" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linLayout1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/btnSubmit" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnCancel" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</FrameLayout>